--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  padding: 25px;
+  padding: var(--horizontal-space);
+  margin-bottom: 15px;
 }
+
 .screen__header__title {
   font-size: 32px;
   font-weight: 600;
