--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -4,8 +4,36 @@
   background-color: #fafafa;
   padding: 15px 0px;
   font-size: 16px;
+  margin-bottom: 10px;
+  margin-top: -15px;
 }
 
 #friends-display-link i {
   color: rgba(0, 0, 0, 0.3);
+}
+
+.friends-screen {
+  padding: 8px var(--horizontal-space);
+}
+
+.friends-screen__channel {
+  margin-top: 5px;
+  border-top: var(--main-border);
+  padding-top: 15px;
+}
+.friends-screen__channel-header {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  color: rgba(0, 0, 0, 0.5);
+}
+.user-component__column:last-child {
+  color: rgba(0, 0, 0, 0.5);
+}
+.recommanded-friends span {
+  margin: 100px 0;
+  display: block;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 18px;
 }
