--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -50,3 +50,17 @@
   display: block;
   margin-bottom: 10px;
 }
+.user-component__subtitle {
+  display: flex;
+}
+.user-component__subtitle span {
+  width: 15px;
+  height: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid tomato;
+  opacity: 0.5;
+  color: tomato;
+  border-radius: 50%;
+}
