--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,6 +2,11 @@
   display: flex;
   justify-content: center;
   padding: 5px 3px;
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: white;
+  top: 0;
 }
 
 .status-bar__column {
