--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -4,6 +4,7 @@
   align-items: center;
   padding: var(--horizontal-space);
   margin-bottom: 15px;
+  margin-top: 35px;
 }
 
 .screen__header__title {
