--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -14,3 +14,15 @@
 .screen__header__icons span {
   margin-left: 25px;
 }
+
+@keyframes rotateCog {
+  form {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+.screen__header .fa-cog:hover {
+  animation: rotateCog 1s linear infinite;
+}
